--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./pages/index.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link rel="stylesheet" href="./pages/index.css">
-</head>
-
-<body>
-  <div class="page">
-    <header class="header"></header>
-    <main class="main">
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-    </main>
-    <footer class="footer"></footer>
-  </div>
-  <script src="./script/data.js"></script>
-  <script src="./script/index.js"></script>
-</body>
-
+  <body>
+    <div class="page">
+      <header class="header"></header>
+      <main class="main">
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+      </main>
+      <footer class="footer"></footer>
+    </div>
+    <script src="./script/data.js"></script>
+    <script src="./script/index.js"></script>
+  </body>
 </html>
