Feauters/ Создана HTML разметка, добавлена папка image

--- a/index.html
+++ b/index.html
@@ -14,8 +14,93 @@
       <main class="main">
         <section></section>
         <section></section>
-        <section></section>
-        <section></section>
+        <section class="choice-suit">
+          <h2 class="choice-suit__title">Выберите ваш костюм</h2>
+          <div class="choice-suit__gender-bar">
+            <p
+              class="choice-suit__gender-bar-title choice-suit__gender-bar-title_active"
+            >
+              Женское
+            </p>
+            <p class="choice-suit__gender-bar-title">Мужское</p>
+          </div>
+          <div class="choice-suit__card-container">
+            <div class="choice-suit__card">
+              <div class="choice-suit__slider">
+                <img
+                  src="./image/With_hoodi.jpg"
+                  alt=""
+                  class="choice-suit__slider-content"
+                />
+              </div>
+              <div class="choice-suit__slider-treck">
+                <button
+                  class="choice-suit__slider-treck-button choice-suit__slider-treck-button_selected"
+                ></button>
+                <button class="choice-suit__slider-treck-button"></button>
+                <button class="choice-suit__slider-treck-button"></button>
+                <button class="choice-suit__slider-treck-button"></button>
+              </div>
+              <div class="choice-suit__slider-bottom-container">
+                <h2 class="choice-suit__slider-title">Костюм с худи</h2>
+                <p class="choice-suit__slider-description">
+                  Свитшот и штаны в цвете «капучино», базовая белая футболка
+                </p>
+                <h2 class="choice-suit__slider-price">7 000</h2>
+                <div class="choice-suit__size-panel">
+                  <button class="choice-suit__size-panel-button">S</button>
+                  <button class="choice-suit__size-panel-button">M</button>
+                  <button class="choice-suit__size-panel-button">L</button>
+                  <button class="choice-suit__size-panel-button">XL</button>
+                </div>
+                <button class="choice-suit__button-adder">
+                  Выбрать костюм
+                </button>
+              </div>
+            </div>
+            <div class="choice-suit__card">
+              <div class="choice-suit__slider">
+                <img
+                  src="./image/With_shot.jpg"
+                  alt="Худи"
+                  class="choice-suit__slider-content"
+                />
+              </div>
+              <div class="choice-suit__slider-treck">
+                <button
+                  class="choice-suit__slider-treck-button choice-suit__slider-treck-button_selected"
+                ></button>
+                <button class="choice-suit__slider-treck-button"></button>
+                <button class="choice-suit__slider-treck-button"></button>
+                <button class="choice-suit__slider-treck-button"></button>
+              </div>
+              <div class="choice-suit__slider-bottom-container">
+                <h2 class="choice-suit__slider-title">Костюм со свитшотом</h2>
+                <p class="choice-suit__slider-description">
+                  Худи и штаны в цвете «капучино», базовая белая футболка
+                </p>
+                <h2 class="choice-suit__slider-price">6 500</h2>
+                <div class="choice-suit__size-panel">
+                  <button class="choice-suit__size-panel-button">S</button>
+                  <button class="choice-suit__size-panel-button">M</button>
+                  <button class="choice-suit__size-panel-button">L</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="about-us">
+          <img src="./image/about_us.jpg" alt="" class="about-us__image" />
+          <div class="about-us__description">
+            <h2 class="about-us__title">О нас</h2>
+            <p class="about-us__text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla
+              quibusdam quisquam facere nobis expedita nam voluptatum pariatur
+              quam, blanditiis tenetur animi. Eaque error corporis, numquam est
+              dolore quae quas recusandae.
+            </p>
+          </div>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
