features/ Полностью завершена верстка

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,20 +15,20 @@
         <section></section>
         <section></section>
         <section class="choice-suit">
-          <h2 class="choice-suit__title">Выберите ваш костюм</h2>
+          <h2 class="choice-suit__title">Выбрать костюм</h2>
           <div class="choice-suit__gender-bar">
-            <p
-              class="choice-suit__gender-bar-title choice-suit__gender-bar-title_active"
+            <button
+              class="choice-suit__gender-bar-button choice-suit__gender-bar-button_active"
             >
               Женское
-            </p>
-            <p class="choice-suit__gender-bar-title">Мужское</p>
+            </button>
+            <button class="choice-suit__gender-bar-button">Мужское</button>
           </div>
           <div class="choice-suit__card-container">
             <div class="choice-suit__card">
               <div class="choice-suit__slider">
                 <img
-                  src="./image/With_hoodi.jpg"
+                  src="./images/With_hoodi.jpg"
                   alt=""
                   class="choice-suit__slider-content"
                 />
@@ -46,14 +46,13 @@
                 <p class="choice-suit__slider-description">
                   Свитшот и штаны в цвете «капучино», базовая белая футболка
                 </p>
-                <h2 class="choice-suit__slider-price">7 000</h2>
+                <h2 class="choice-suit__slider-price">7 000 руб</h2>
                 <div class="choice-suit__size-panel">
                   <button class="choice-suit__size-panel-button">S</button>
                   <button class="choice-suit__size-panel-button">M</button>
                   <button class="choice-suit__size-panel-button">L</button>
-                  <button class="choice-suit__size-panel-button">XL</button>
                 </div>
-                <button class="choice-suit__button-adder">
+                <button class="choice-suit__button choice-suit__button-adder">
                   Выбрать костюм
                 </button>
               </div>
@@ -61,7 +60,7 @@
             <div class="choice-suit__card">
               <div class="choice-suit__slider">
                 <img
-                  src="./image/With_shot.jpg"
+                  src="./images/With_shot.jpg"
                   alt="Худи"
                   class="choice-suit__slider-content"
                 />
@@ -79,18 +78,19 @@
                 <p class="choice-suit__slider-description">
                   Худи и штаны в цвете «капучино», базовая белая футболка
                 </p>
-                <h2 class="choice-suit__slider-price">6 500</h2>
+                <h2 class="choice-suit__slider-price">6 500 руб</h2>
                 <div class="choice-suit__size-panel">
                   <button class="choice-suit__size-panel-button">S</button>
                   <button class="choice-suit__size-panel-button">M</button>
                   <button class="choice-suit__size-panel-button">L</button>
                 </div>
+                <button class="choice-suit__button">В корзину</button>
               </div>
             </div>
           </div>
         </section>
         <section class="about-us">
-          <img src="./image/about_us.jpg" alt="" class="about-us__image" />
+          <img src="./images/about_us.jpg" alt="" class="about-us__image" />
           <div class="about-us__description">
             <h2 class="about-us__title">О нас</h2>
             <p class="about-us__text">
