--- a/index.html
+++ b/index.html
@@ -25,68 +25,40 @@
             <button class="choice-suit__gender-bar-button">Мужское</button>
           </div>
           <div class="choice-suit__card-container">
-            <div class="choice-suit__card">
-              <div class="choice-suit__slider">
-                <img
-                  src="./images/With_hoodi.jpg"
-                  alt=""
-                  class="choice-suit__slider-content"
-                />
-              </div>
-              <div class="choice-suit__slider-treck">
-                <button
-                  class="choice-suit__slider-treck-button choice-suit__slider-treck-button_selected"
-                ></button>
-                <button class="choice-suit__slider-treck-button"></button>
-                <button class="choice-suit__slider-treck-button"></button>
-                <button class="choice-suit__slider-treck-button"></button>
-              </div>
-              <div class="choice-suit__slider-bottom-container">
-                <h2 class="choice-suit__slider-title">Костюм с худи</h2>
-                <p class="choice-suit__slider-description">
-                  Свитшот и штаны в цвете «капучино», базовая белая футболка
-                </p>
-                <h2 class="choice-suit__slider-price">7 000 руб</h2>
-                <div class="choice-suit__size-panel">
-                  <button class="choice-suit__size-panel-button">S</button>
-                  <button class="choice-suit__size-panel-button">M</button>
-                  <button class="choice-suit__size-panel-button">L</button>
+            <template id="card-template">
+              <div class="choice-suit__card">
+                <div class="choice-suit__slider">
+                  <img
+                    src="./images/With_hoodi.jpg"
+                    alt="Худи"
+                    class="choice-suit__slider-content"
+                  />
                 </div>
-                <button class="choice-suit__button choice-suit__button-adder">
-                  Выбрать костюм
-                </button>
-              </div>
-            </div>
-            <div class="choice-suit__card">
-              <div class="choice-suit__slider">
-                <img
-                  src="./images/With_shot.jpg"
-                  alt="Худи"
-                  class="choice-suit__slider-content"
-                />
-              </div>
-              <div class="choice-suit__slider-treck">
-                <button
-                  class="choice-suit__slider-treck-button choice-suit__slider-treck-button_selected"
-                ></button>
-                <button class="choice-suit__slider-treck-button"></button>
-                <button class="choice-suit__slider-treck-button"></button>
-                <button class="choice-suit__slider-treck-button"></button>
-              </div>
-              <div class="choice-suit__slider-bottom-container">
-                <h2 class="choice-suit__slider-title">Костюм со свитшотом</h2>
-                <p class="choice-suit__slider-description">
-                  Худи и штаны в цвете «капучино», базовая белая футболка
-                </p>
-                <h2 class="choice-suit__slider-price">6 500 руб</h2>
-                <div class="choice-suit__size-panel">
-                  <button class="choice-suit__size-panel-button">S</button>
-                  <button class="choice-suit__size-panel-button">M</button>
-                  <button class="choice-suit__size-panel-button">L</button>
+                <div class="choice-suit__slider-treck">
+                  <button
+                    class="choice-suit__slider-treck-button choice-suit__slider-treck-button_selected"
+                  ></button>
+                  <button class="choice-suit__slider-treck-button"></button>
+                  <button class="choice-suit__slider-treck-button"></button>
+                  <button class="choice-suit__slider-treck-button"></button>
                 </div>
-                <button class="choice-suit__button">В корзину</button>
+                <div class="choice-suit__slider-bottom-container">
+                  <h2 class="choice-suit__slider-title">Костюм с худи</h2>
+                  <p class="choice-suit__slider-description">
+                    Свитшот и штаны в цвете «капучино», базовая белая футболка
+                  </p>
+                  <h2 class="choice-suit__slider-price">7 000 руб</h2>
+                  <div class="choice-suit__size-panel">
+                    <button class="choice-suit__size-panel-button">S</button>
+                    <button class="choice-suit__size-panel-button">M</button>
+                    <button class="choice-suit__size-panel-button">L</button>
+                  </div>
+                  <button class="choice-suit__button choice-suit__button-adder">
+                    Выбрать костюм
+                  </button>
+                </div>
               </div>
-            </div>
+            </template>
           </div>
         </section>
         <section class="about-us">
@@ -106,5 +78,6 @@
     </div>
     <script src="./script/data.js"></script>
     <script src="./script/index.js"></script>
+    <script src="./script/slider.js"></script>
   </body>
 </html>
