features/ Сделал массив с карточками, рендер карточек происходит через скрипт, филтрация на мужское и женское

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
           <div class="choice-suit__gender-bar">
             <button
               class="choice-suit__gender-bar-button choice-suit__gender-bar-button_active"
+              id="genW"
             >
               Женское
             </button>
-            <button class="choice-suit__gender-bar-button">Мужское</button>
+            <button class="choice-suit__gender-bar-button" id="genM">
+              Мужское
+            </button>
           </div>
           <div class="choice-suit__card-container">
             <template id="card-template">
@@ -38,9 +41,18 @@
                   <button
                     class="choice-suit__slider-treck-button choice-suit__slider-treck-button_selected"
                   ></button>
-                  <button class="choice-suit__slider-treck-button"></button>
-                  <button class="choice-suit__slider-treck-button"></button>
-                  <button class="choice-suit__slider-treck-button"></button>
+                  <button
+                    class="choice-suit__slider-treck-button"
+                    id="treck1"
+                  ></button>
+                  <button
+                    class="choice-suit__slider-treck-button"
+                    id="treck2"
+                  ></button>
+                  <button
+                    class="choice-suit__slider-treck-button"
+                    id="treck3"
+                  ></button>
                 </div>
                 <div class="choice-suit__slider-bottom-container">
                   <h2 class="choice-suit__slider-title">Костюм с худи</h2>
@@ -66,10 +78,9 @@
           <div class="about-us__description">
             <h2 class="about-us__title">О нас</h2>
             <p class="about-us__text">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla
-              quibusdam quisquam facere nobis expedita nam voluptatum pariatur
-              quam, blanditiis tenetur animi. Eaque error corporis, numquam est
-              dolore quae quas recusandae.
+              Внимание к деталям и лаконичность кроя. Турецкие ткани из 100%
+              хлопка, омский пошив. Стиль, комфорт, атмосфера и качество. Это
+              то, что нас определяет.
             </p>
           </div>
         </section>
