feat: Добавлен слайдер с иновационной техникой добавления карточек, снимается opactu при hovere на активную кнопку, реализована функция treck-bar и много еще

--- a/index.html
+++ b/index.html
@@ -36,15 +36,18 @@
                 <div class="choice-suit__card-button-left"></div>
                 <div class="choice-suit__card-button-right"></div>
                 <div class="choice-suit__slider">
-                  <img
-                    src="./images/With_hoodi.jpg"
-                    alt="Худи"
-                    class="choice-suit__slider-content"
-                  />
+                  <div class="choice-suit__slider-item">
+                    <img
+                      src=""
+                      alt="Худи"
+                      class="choice-suit__slider-content"
+                    />
+                  </div>
                 </div>
                 <div class="choice-suit__slider-treck">
                   <button
                     class="choice-suit__slider-treck-button choice-suit__slider-treck-button_selected"
+                    id="treck0"
                   ></button>
                   <button
                     class="choice-suit__slider-treck-button"
@@ -91,15 +94,18 @@
                 <div class="choice-suit__card-button-left"></div>
                 <div class="choice-suit__card-button-right"></div>
                 <div class="choice-suit__slider">
-                  <img
-                    src="./images/With_hoodi.jpg"
-                    alt="Худи"
-                    class="choice-suit__slider-content"
-                  />
+                  <div class="choice-suit__slider-item">
+                    <img
+                      src=""
+                      alt="Худи"
+                      class="choice-suit__slider-content"
+                    />
+                  </div>
                 </div>
                 <div class="choice-suit__slider-treck">
                   <button
                     class="choice-suit__slider-treck-button choice-suit__slider-treck-button_selected"
+                    id="treck0"
                   ></button>
                   <button
                     class="choice-suit__slider-treck-button"
