--- a/index.html
+++ b/index.html
@@ -171,6 +171,6 @@
       <footer class="footer"></footer>
     </div>
     <script src="./script/data.js"></script>
-    <script src="./script/index.js"></script>
+    <script src="./script/slider.js"></script>
   </body>
 </html>
